--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Topfuebersetzer</title>
@@ -7,7 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+
+<body style="background-image: url('assets/potatoes-g99fc31139_1920.jpg')">
   <app-root></app-root>
 </body>
+
 </html>
